[package]
name = "rssn-experimental"
version = "0.1.13"
edition = "2021"
authors = ["The rssn developers"]
description = "A comprehensive scientific computing library for Rust, aiming for feature parity with NumPy, SciPy, and SymPy."
license = "Apache-2.0"
repository = "https://github.com/Apich-Organization/rssn"
homepage = "https://github.com/Apich-Organization/rssn"
readme = "README.md"
keywords = [
    "scientific-computing",
    "symbolic-math",
    "numerical-analysis",
    "physics-simulation",
    "optimization",
]
categories = [
    "science",
    "mathematics",
    "data-structures",
    "simulation",
    "algorithms",
]
exclude = [
    "examples/fortran/*.dll",
    "examples/fortran/*.exe",
    "examples/fortran/*.lib",
    "examples/fortran/*.pdb",
    "examples/fortran/*.d",
    "examples/fortran/*.exp",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = false
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[dependencies]
uuid = { version = "1.4", features = ["v4"] }
libc = { version = "0.2", optional = true }
ndarray = { version = "0.16.1", features = ["serde"] }
statrs = "0.18.0"
argmin-math = { version = "0.5", features = [
    "ndarray_latest-nolinalg",
    "nalgebra_latest",
] }
argmin = { version = "0.11", features = ["serde", "serde1"] }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
quadrature = "0.1.2"
interp = "2.1.1"
itertools = "0.14"
rustfft = "6.1.0"
sprs-rssn = "0.11.4"
uom = { version = "0.37.0", features = [
    "use_serde",
    "num-bigint",
    "std",
    "usize",
    "si",
] }
bigdecimal = { version = "0.4", features = ["serde"] }
special = "0.11.4"
errorfunctions = "0.2"
ndarray-npy = { version = "0.9", optional = true }
rayon = "1.8"
bincode = { version = "2", features = ["serde"] }
rand_v09 = { package = "rand", version = "0.9.2" }
rand = "0.8.5"
ordered-float = "5.0.0"
num-complex = "0.4.4"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
libloading = { version = "0.8", optional = true }
dashmap = "6.1"
once_cell = "1.19"
lazy_static = "1.4.0"
# Not updating nom for compatibility issues.
nom = "7"

plotters = { version = "0.3", features = [
    "image",
    "chrono",
    "ttf",
    "font-kit",
    "evcxr",
], optional = true }
ahash = { version = "0.8.12", features = ["serde"] }
abi_stable = { version = "0.11.3", optional = true }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "cargo_metadata", "emit_and_set", "regex", "rustc", "rustc_version", "si", "sysinfo", "time"] }
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo", "emit_and_set", "rustc", "si"] }

[features]
default = []
output = ["plotters", "ndarray-npy"]
physics = []
plugins = ["libloading", "abi_stable"]
ffi_api = []
#Will be avalible at v0.3.0 release.
ffi_blinding = ["libc"]
full = ["default", "output", "physics", "plugins", "ffi_api", "ffi_blinding"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.2"
assert_approx_eq = "1.1.0"

[[bench]]
name = "rssn_benches"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
empty-line-after-doc-comments = "allow"
